--- a/index.html
+++ b/index.html
@@ -3,12 +3,83 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+
+
+    <style>
+
+
+    :root {
+        --main-background: #62B6CB;
+        --main-foreground: ##5FA8D3;
+        --pane-padding: 5px 42px;
+        --bg-black: #12100E;
+        --font-blue: ##62B6CB;
+        --font-white: white;
+    }
+
+    .bgblack .navbar-nav .nav-link {
+        color: var(--font-blue);
+    }
+
+    .bgblack .navbar-nav .nav-link:hover {
+        color: var(--font-white);
+    }
+
+    .bgblack .navbar-brand {
+        color: var(--font-blue);
+        font-size: 30px;
+    }
+
+
+
+
+    body{
+        background-color: var(--main-background);
+        foreground-color: var(--main-foreground);
+        font-family: 'Roboto', sans-serif;
+        color: var(--font-white);
+        font-size: 24px;
+        text-align: left;
+    }
+
+    .bgblack{
+        background: var(--bg-black);
+    }
+
+
+    h1,h2,h3,h4{
+        font-family: font-family: 'Poppins', sans-serif;;
+        text-align: left;
+    }
+
+    h1{
+        margin-top: 10%;
+        margin-bottom: 10%;
+        text-align: center;
+    }
+
+    footer{
+    background-color: #5FA8D3;
+    min-height: 5vh;
+    text-align: center;
+    margin-top: 5%;
+    }
+
+
+
+    </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Your Name Here</a>
+        <nav class="navbar navbar-expand-md navbar-dark bgblack">
+            <a class="navbar-brand" href="#">Caleb Nolet</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
                 aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +108,7 @@
         <x-markdown2html src="about.md" id="about"></x-markdown2html>
     </main>
     <footer>
-        <p>Caleb Nolet </p>
+        <p>Caleb Nolet &copy;</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
